--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,22 @@
 [tox]
+skipsdist = True
+usedevelop = True
+
 envlist =
-    python{3.9,3.10,3.11,3.12,3.13}-django{4.2,5.0,5.1}-wagtail{5.2,6.0,6.1,6.2,6.3}
+    python{3.9,3.10,3.11,3.12}-django4.2-wagtail5.2
+    python{3.10,3.11,3.12}-django5.0-wagtail{5.2,6.3,6.4}
+    python{3.10,3.11,3.12,3.13}-django5.1-wagtail{6.3,6.4}
+
+[gh-actions]
+python =
+    3.9: python3.9
+    3.10: python3.10
+    3.11: python3.11
+    3.12: python3.12
+    3.13: python3.13
 
 [testenv]
+install_command = pip install -e ".[testing]" -U {opts} {packages}
 commands = python runtests.py
 
 basepython =
@@ -15,9 +29,10 @@ basepython =
 deps =
     django4.2: Django>=4.2,<5.0
     django5.0: Django>=5.0,<5.1
-    django5.0: Django>=5.1,<5.2
+    django5.1: Django>=5.1,<5.2
     wagtail5.2: wagtail>=5.2,<6.0
     wagtail6.0: wagtail>=6.0,<6.1
     wagtail6.1: wagtail>=6.1,<6.2
     wagtail6.2: wagtail>=6.2,<6.3
     wagtail6.3: wagtail>=6.3,<6.4
+    wagtail6.4: wagtail>=6.4,<6.5
